--- a/Client/Platforms/Android/AndroidManifest.xml
+++ b/Client/Platforms/Android/AndroidManifest.xml
@@ -9,5 +9,6 @@
 	<uses-permission android:name="android.permission.READ_MEDIA_AUDIO" />
 	<uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
 	<uses-permission android:name="android.permission.READ_MEDIA_VIDEO" />
+	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 	<uses-sdk android:minSdkVersion="21" />
 </manifest>
