--- a/Class_interaction_Users/Class_interaction_Users.csproj
+++ b/Class_interaction_Users/Class_interaction_Users.csproj
@@ -94,5 +94,8 @@
     <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="System\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
